Fix white space below footer

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
 
 .footer p {
 	margin-top: 14px;
-	margin-bottom: 14px;
 }
 
 p, li {
